--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -62,6 +62,8 @@ body {
     margin-bottom: 50px;
   }
   #menu-tile {
+    background-color: #D1CCDC;
+    color: #000;
     height: 1000px;
     width: 100%;
     margin-bottom: 15px;
