--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -80,7 +80,7 @@ body {
     text-align: center;
     font-size: 1.6em;
     text-transform: uppercase;
-    color: #fff;
+    color: #000;
     opacity: 1;
     margin-top: 10px;
     /*margin-bottom: 20px;*/
